# azure-ai-intro

./: .env.sample  .gitignore  README.md  chapter_0_minimal_agent.py  chapter_1_create_agent.py  chapter_2_fetch_agent.py  chapter_3_run_agent.py  chapter_4_azure_functions.py  pyproject.toml
agent/: client.py
azure_functions/: local.settings.json
azure_functions/get_stock_fundamentals/: function_app.py
azure_functions/search_news/: function_app.py
tools/: stock_tools.py
